# agentic-conversations-hdf5

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: benchmark.py  build_slides_week3.py  gen_synthetic.py  jsonl_vs_hdf5.py  opt_figures.py  plot_results.py  profile_ops.py  write_results_md.py
claude-mem-vectors/: results.md
claude-mem-vectors/benchmarks/: _common.py  _mem_child.py  bench_cold_start.py  bench_file_size.py  bench_hdf5_tuning.py  bench_memory.py  bench_query_latency.py  bench_upsert_throughput.py  plot_results.py  workload.py
claude-mem-vectors/results/: cold_start.json  file_size.json  hdf5_tuning.json  memory.json  query_latency.json  upsert_throughput.json
claude-mem-vectors/store/: __init__.py  embedders.py  hdf5_compound_store.py  hdf5_packed_store.py  hdf5_store.py  inmem_store.py  sqlite_blob_store.py  vector_store.py
docs/: orc-comparison.md  original-plan.md  releasing.md  schema-optimization-results.md  schema.md
src/agentic_conversations_hdf5/: __init__.py  cli.py  convert.py  convert_compound.py  convert_packed.py  schema.py  schema_compound.py  schema_packed.py
src/agentic_conversations_hdf5/backends/: base.py  hdf5.py  hdf5_compound.py  hdf5_packed.py  jsonseq.py  orc_backend.py  sqlite.py
src/agentic_conversations_hdf5/hooks/: live_session.py
tests/: test_backends.py  test_convert.py  test_hdf5_backend.py  test_live_hook.py  test_orc_backend.py
tests/fixtures/: sample.jsonl  synthetic_2mb.jsonl
