[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-conversations-hdf5"
version = "1.0.0"
description = "Store agent conversation logs (e.g. Claude Code JSONL) as HDF5 for cheaper context reconstruction, analytical queries, and self-contained provenance."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
orc = ["pyarrow>=14"]
bench = ["matplotlib>=3.7", "pyarrow>=14", "python-pptx>=0.6"]
dev = ["pytest>=7", "pyarrow>=14"]

[project.urls]
Homepage = "https://github.com/mattjala/agentic-conversations-hdf5"
Repository = "https://github.com/mattjala/agentic-conversations-hdf5"

[project.scripts]
agentic-conversations-hdf5 = "agentic_conversations_hdf5.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
